--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/ico" href="./imags/1.jpg" /> <!-- 添加 favicon icon -->
     <link rel="stylesheet" href="./css/index.css" />
     <title>项目</title>
     <style>
