--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <ul class="content-wrap">
         <li>
           <!-- <p><a href="javasctipt:;">微信聊天</a></p> -->
-          <p><a href="https://gitee.com/CarrieProject/wechat.git">链接码云微信实时通信代码</a></p>
+          <p><a href="https://gitee.com/zhouyunfang/wechat">链接码云微信实时通信代码</a></p>
         </li>
         <li>
           <p><a href="./m-t/index.html">美团</a></p>
-          <p><a href="https://gitee.com/CarrieProject/american_regiment">链接码云美团代码</a></p>
+          <p><a href="https://gitee.com/zhouyunfang/american_regiment">链接码云美团代码</a></p>
         </li>
          <li>
           <p><a href="./blogs/index.html">vue个人博客</a></p>
-          <p><a href="https://gitee.com/CarrieProject/blogs">链接码云个人博客代码</a></p>
+          <p><a href="https://gitee.com/zhouyunfang/blogs">链接码云个人博客代码</a></p>
         </li>
       </ul>
     </div>
