添加react-redux-demo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
           <p><a href="./blogs/index.html">vue个人博客</a></p>
           <p><a href="https://gitee.com/zhouyunfang/blogs">链接码云个人博客代码</a></p>
         </li>
+        <li>
+          <p><a href="./blogs/index.html">React与redux简单的demo使用线上IP地址,可以添加数据但是都是静态的</a></p>
+          <p><a href="https://gitee.com/zhouyunfang/react-redux.git">链接码云React-redux代码</a></p>
+        </li>
       </ul>
     </div>
   </body>
