--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <p><a href="./react-redux/index.html">React与redux简单的demo使用线上IP地址,可以添加数据但是都是静态的</a></p>
           <p><a href="https://gitee.com/zhouyunfang/react-redux.git">链接码云React-redux代码</a></p>
         </li>
+        <li>
+          <p><a href="./react-redux-demo1/index.html">React简单的使用reducer进行存值和取值</a></p>
+          <p><a href="https://gitee.com/zhouyunfang/react-redux-demo">链接码云查看原码</a></p>
+        </li>
       </ul>
     </div>
   </body>
