--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/ico" href="./imags/1.jpg" /> <!-- 添加 favicon icon -->
-    <link rel="stylesheet" href="./css/index.css" />
-    <title>项目</title>
-    <style>
-   
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="title">以下为项目的链接效果和代码地址</div>
-      <ul class="content-wrap">
-        <li>
-          <!-- <p><a href="javasctipt:;">微信聊天</a></p> -->
-          <p><a href="https://gitee.com/zhouyunfang/wechat">链接码云微信实时通信代码</a></p>
-        </li>
-        <li>
-          <p><a href="./m-t/index.html">美团</a></p>
-          <p><a href="https://gitee.com/zhouyunfang/american_regiment">链接码云美团代码</a></p>
-        </li>
-         <li>
-          <p><a href="./blogs/index.html">vue个人博客</a></p>
-          <p><a href="https://gitee.com/zhouyunfang/blogs">链接码云个人博客代码</a></p>
-        </li>
-        <li>
-          <p><a href="./react-redux/index.html">React与redux简单的demo使用线上IP地址,可以添加数据但是都是静态的</a></p>
-          <p><a href="https://gitee.com/zhouyunfang/react-redux.git">链接码云React-redux代码</a></p>
-        </li>
-        <li>
-          <p><a href="./react-redux-demo1/index.html">React简单的使用reducer进行存值和取值</a></p>
-          <p><a href="https://gitee.com/zhouyunfang/react-redux-demo">链接码云查看原码</a></p>
-        </li>
-      </ul>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <link rel="shortcut icon" type="image/ico" href="./imags/1.jpg" /> <!-- 添加 favicon icon -->
+  <link rel="stylesheet" href="./css/index.css" />
+  <title>项目</title>
+  <style>
+
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="title">以下为项目的链接效果和代码地址</div>
+    <ul class="content-wrap">
+      <li>
+        <!-- <p><a href="javasctipt:;">微信聊天</a></p> -->
+        <p><a href="https://gitee.com/zhouyunfang/wechat">链接码云微信实时通信代码</a></p>
+      </li>
+      <li>
+        <p><a href="./m-t/index.html">美团</a></p>
+        <p><a href="https://gitee.com/zhouyunfang/american_regiment">链接码云美团代码</a></p>
+      </li>
+      <li>
+        <p><a href="./blogs/index.html">vue个人博客</a></p>
+        <p><a href="https://gitee.com/zhouyunfang/blogs">链接码云个人博客代码</a></p>
+      </li>
+      <li>
+        <p><a href="./react-redux/index.html">React与redux简单的demo使用线上IP地址,可以添加数据但是都是静态的</a></p>
+        <p><a href="https://gitee.com/zhouyunfang/react-redux.git">链接码云React-redux代码</a></p>
+      </li>
+      <li>
+        <p><a href="./react-redux-demo1/index.html">React简单的使用reducer进行存值和取值</a></p>
+        <p><a href="https://gitee.com/zhouyunfang/react-redux-demo">链接码云查看原码</a></p>
+      </li>
+    </ul>
+  </div>
+</body>
+
 </html>
